--- a/ExNo.3/Registration.html
+++ b/ExNo.3/Registration.html
@@ -62,7 +62,7 @@ return false;
 }
 function cantgo()
 {
-document.getElementById("danger").innerHTML="You cant do that !!!!";
+document.getElementById("danger").innerHTML="You can't do that !!!!";
 }
 </script>
 </head>
