--- a/ExNo.3/product.html
+++ b/ExNo.3/product.html
@@ -28,7 +28,7 @@
 
 <div id="image1">
 
-<input type="checkbox" name=".9mm Pistol" id="item1" alt=".9mm Pistol" />
+<input type="checkbox" name="9mm Pistol" id="item1" alt=".9mm Pistol" />
 
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTcmGKp4Db6dGTPAzuTqBqGSQYSUThuUikKkQ&usqp=CAU"height="175" width="300"/>
   <h4>.9mm Pistol</h4>
