--- a/ExNo.4/index.html
+++ b/ExNo.4/index.html
@@ -24,8 +24,6 @@ rel="stylesheet"
 <input type="text"
 name="fname"
 
-38
-
 id="fname"
 placeholder="First Name"
 required
@@ -97,7 +95,7 @@ pattern=".{6}" required
 <br />
 <input type="checkbox" name="agree" id="agree" required />
 <label for="agree"
->I agree to the <a href="terms.html">terms and conditions</a></label
+>I agree to the <a href="Terms.html">terms and conditions</a></label
 >
 <br />
 <br />
