--- a/ExNo.4/Terms.html
+++ b/ExNo.4/Terms.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>T&C</title>
-<link rel="stylesheet" href="terms.css" />
+<link rel="stylesheet" href="Terms.css" />
 </head>
 <body>
 <div>
