--- a/ExNo.4/index.html
+++ b/ExNo.4/index.html
@@ -95,8 +95,7 @@ pattern=".{6}" required
 <br />
 <input type="checkbox" name="agree" id="agree" required />
 <label for="agree"
->I agree to the <a href="Terms.html">terms and conditions</a></label
->
+>I agree to the <a href="Terms.html">terms and conditions</a></label>
 <br />
 <br />
 <input type="submit" value="Register" id="register" />
