--- a/ExNo.4/index.html
+++ b/ExNo.4/index.html
@@ -16,7 +16,7 @@ rel="stylesheet"
 <body>
 <center>
 <img src="bike.png" alt="" />
-<h1>Four wheels move your body but Two wheels move your soul!</h1>
+<h1>Welcome to Bank of Casterly Rock</h1>
 <h2>Registration</h2>
 </center>
 <center>
@@ -59,20 +59,17 @@ requried
 <br />
 <input type="text" name="city" id="city" placeholder="City" requried />
 <br />
-<label for="iCC">Categories in Engines</label>
+<label for="iCC">Types of Account</label>
 <br />
-<input type="checkbox" name="iCC" id="i100CC-200CC" />
-<label for="i100CC-200CC">100CC-200cc</label>
-<input type="checkbox" name="iCC" id="i300CC-600CC" />
-<label for="i300CC-600CC">300CC-600CC</label>
-<input type="checkbox" name="iCC" id="i600CC-1000CC" />
-<label for="i600CC-1000CC">600CC-1000CC</label>
+<input type="checkbox" name="iCC" id="Savings" />
+<label for="Savings">Savings</label>
+<input type="checkbox" name="iCC" id="Current" />
+<label for="Current">Current</label>
+<input type="checkbox" name="iCC" id="Loan" />
+<label for="Loan">Loan</label>
 <br /> <input
 type="text"
 name="address"
-
-39
-
 id="address"
 placeholder="Address"
 required
@@ -85,14 +82,14 @@ id="phone"
 placeholder="Phone number"
 pattern="\d{10}"
 required />
-<br /> <input
+<br/> <input
 type="password"
 name="password"
 id="password"
 placeholder="Password"
 pattern=".{6}" required
 />
-<br />
+<br/>
 <input type="checkbox" name="agree" id="agree" required />
 <label for="agree"
 >I agree to the <a href="Terms.html">terms and conditions</a></label>
