--- a/ExNo.4/Terms.html
+++ b/ExNo.4/Terms.html
@@ -16,10 +16,10 @@
 <ul>
 <li>
 This web application is purely done only for an academic assignment
-and is not intended to be used as a real bike test ride site.
+and is not intended to be used as a real banking registration site.
 </li>
 <li>
-This web application will not be used to promote any kind of under age driving.
+This web application will not be used to promote any kind of illegal banking.
 </ul>
 </div>
 <center>
