--- a/ExNo.4/Terms.html
+++ b/ExNo.4/Terms.html
@@ -16,7 +16,7 @@
 <ul>
 <li>
 This web application is purely done only for an academic assignment
-and is not intended to be used as a real banking registration site.
+and is not intended to be used as a real Banking registration site.
 </li>
 <li>
 This web application will not be used to promote any kind of illegal banking.
