--- a/ExNo.4/End.html
+++ b/ExNo.4/End.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <center>
-<h1>Currently we don't have any bikes now</h1>
+<h1>Currently we don't have any Services now</h1>
 <h1>Have a great day</h1>
 </center>
 </body>
