--- a/ExNo.4/index.html
+++ b/ExNo.4/index.html
@@ -15,7 +15,7 @@ rel="stylesheet"
 </head>
 <body>
 <center>
-<img src="123.jpg" alt="Bank" />
+<img src="123.png" alt="Bank" />
 <h1>Welcome to Bank of Casterly Rock</h1>
 <h2>Registration</h2>
 </center>
